<resources>
    <string name="app_name">ShowLocation</string>
    <string name="phone_number">phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">Send Message</string>
    <string name="reset_time">00:00:00</string>
    <string name="number">Number</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="add">Add #</string>
    <string name="time_span_in_minutes">Time span (In minutes)</string>

</resources>
