<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/numEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="287dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:text="@string/_00_00_00"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#615E5E"
        android:textSize="44sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/endButton"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:text="@string/end" />

    <EditText
        android:id="@+id/timeSpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:hint="@string/time_span_in_minutes"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/AddNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:layout_toStartOf="@+id/endButton"
        android:layout_toLeftOf="@+id/endButton"
        android:layout_toEndOf="@+id/startButton"
        android:layout_toRightOf="@+id/startButton"
        android:text="@string/add" />

    <TextView
        android:id="@+id/ListNumbers"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="146dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>